upgrade to the 1.0.2-RELEASE test case
